--- a/Landing-Page.html
+++ b/Landing-Page.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Lib-Mat</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="PiePag.css" />
   </head>
 
   <body>
