--- a/Landing-Page.html
+++ b/Landing-Page.html
@@ -20,6 +20,11 @@
           alt="Logo Lib-Mat"
         />
       </a>
+       <!-- BOTÓN libro -->
+   <button class="menu-toggle" aria-label="Abrir menú">
+    &#9776;
+    <!-- Ícono de libro -->
+   </button>
 
       <ul class="Menu-Horizontal">
         <li><a href="#">Comprar</a></li>
