--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <section class="login-container">
       <div class="login-box">
-        <h2>Acceso Restringido</h2>
+        <h2>Iniciar Sesion</h2>
 
         <form onsubmit="return validarLogin(event);">
           <div class="input-group">
@@ -24,7 +24,7 @@
           </div>
 
           <div class="input-group">
-            <label for="password">Clave de Acceso (ok)</label>
+            <label for="password">Contraseña de Acceso</label>
             <input
               type="password"
               id="password"
@@ -34,7 +34,7 @@
             />
           </div>
 
-          <button type="submit" class="login-button">Iniciar Sesión</button>
+          <button type="submit" class="login-button">Iniciar</button>
         </form>
       </div>
     </section>
