--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <section class="login-container">
       <div class="login-box">
-        <h2>Iniciar Sesion</h2>
+        <h2>Iniciar Sesión</h2>
 
         <form onsubmit="return validarLogin(event);">
           <div class="input-group">
