--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login con Clave Estática</title>
+    <link rel="stylesheet" href="menu_toggle.css" />
     <link rel="stylesheet" href="login.css" />
   </head>
   <body>
