--- a/Landing-Page.html
+++ b/Landing-Page.html
@@ -7,6 +7,7 @@
     <title>Lib-Mat</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="PiePag.css" />
+    <link rel="stylesheet" href="menu_toggle.css" />
   </head>
 
   <body>
@@ -220,5 +221,6 @@
   </div>
   </footer>
   </section>
+  <script src="menu_toggle.js"></script>
   </body>
 </html>
