--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </div>
 
           <div class="input-group">
-            <label for="password">Contraseña de Acceso</label>
+            <label for="password">Contraseña de Acceso(1234)</label>
             <input
               type="password"
               id="password"
